# cpp-sdl-learinig

./: .gitignore  .gitmodules  README.md  TODO.md
p001-pong/: CMakeLists.txt  INFO.md  NOTES.md  build.sh  clear.sh  run.sh
p001-pong/src/: main.cpp
